@@ -20,6 +20,7 @@ following names for their contribution to the product.
 * Hojjat
 * Jon Harald Søby
 * Leon Weber
+* Matt Johnston
 * Meno25
 * MinuteElectron
 * Mohamed Magdy
