@@ -2501,6 +2501,7 @@ Fill in a specific reason below (for example, citing particular pages that were 
 'ipbotherreason'                  => 'Other/additional reason:',
 'ipbhidename'                     => 'Hide username from the block log, active block list and user list',
 'ipbwatchuser'                    => "Watch this user's user and talk pages",
+'ipballowusertalk'                => "Allow this user to edit their own talk page while blocked",
 'badipaddress'                    => 'Invalid IP address',
 'blockipsuccesssub'               => 'Block succeeded',
 'blockipsuccesstext'              => '[[Special:Contributions/$1|$1]] has been blocked.<br />
@@ -2545,6 +2546,7 @@ See the [[Special:IPBlockList|IP block list]] for the list of currently operatio
 'block-log-flags-nocreate'        => 'account creation disabled',
 'block-log-flags-noautoblock'     => 'autoblock disabled',
 'block-log-flags-noemail'         => 'e-mail blocked',
+'block-log-flags-nousertalk'      => 'cannot edit own talk page',
 'block-log-flags-angry-autoblock' => 'enhanced autoblock enabled',
 'range_block_disabled'            => 'The sysop ability to create range blocks is disabled.',
 'ipb_expiry_invalid'              => 'Expiry time invalid.',
