@@ -138,6 +138,7 @@ The following extensions are migrated into MediaWiki 1.14:
   image.
 * (bug 12650) It is now possible to set different expiration times for different
   restriction types on the protection form.
+* (bug 8440) Allow preventing blocked users from editing their talk pages
 
 === Bug fixes in 1.14 ===
 
